<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="5dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"/>

            <TextView
                android:id="@+id/tv_age_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"/>

            <TextView
                android:id="@+id/tv_profession_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profession"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>